# WatchdogAI

./: .gitattributes  .gitignore  Info_Diego.ipynb  README.md  Report.html  Report.qmd  ViT.ipynb  ai_detection.ipynb  ai_poster_detection.ipynb  detection_pipeline.py  download_ai.ipynb  eval_losses.csv  generate_posters.py  main.ipynb  main2.ipynb  object_detection.ipynb  poster_detection.ipynb  pyproject.toml  report.qmd  train_losses.csv  training_mmdetection_colab.ipynb  try.ipynb
AI_Detection/: ViT.ipynb  plots.ipynb
Object_Detection/: Data_Preprocess.ipynb  Info_for_training.ipynb
ai_detection/: ViT.ipynb  ai_detection.ipynb  plots.ipynb  test.ipynb
environment/: Environment.qmd  environment.yml
htc_r50_artifact_final/20250424_163117/vis_data/: scalars.json
mmdet/: object_detection.ipynb  test.ipynb
models/AIDetectorResNet/run_2/: history.json
models/AIDetectorResNet/run_3/: history.json
models/Simple3BlockCNN/run_3/: history.json
models/SimpleResNetCNN/run_1/: history.json
models/SimpleResNetCNN/run_6/: history.json
models/htc_r50_artifact_final/: best_coco_bbox_mAP_epoch_11.pth  htc_r50_fpn_1x_artifact.py
models/non_poster_model/: config.json
notebooks/: main.ipynb
poster_detection/: ai_poster_detection.ipynb  poster_detection.ipynb
src/: dataset.py  detectors.py  download_ai.ipynb  download_images.py  generate_posters.py  model.py  models.py  train.py  utils.py
