[project]
name = "watchdogai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "boto3>=1.37.36",
    "datasets>=3.5.0",
    "diffusers>=0.33.1",
    "hf-xet>=1.0.3",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.11",
    "matplotlib>=3.10.1",
    "openai>=1.75.0",
    "requests>=2.32.3",
    "safetensors>=0.5.3",
    "streamlit>=1.44.1",
    "tabulate>=0.9.0",
    "tensorflow-datasets>=4.9.8",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "zstandard>=0.23.0",
]
