[project]
name = "watchdogai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "transformers[torch]",
]
